# occlusion

./: .gitignore  CMakeLists.txt  README.md
src/occlusion/: buffer.h  camera.cc  camera.h  dataset.cc  dataset.h  dataset_utkinect.cc  dataset_utkinect.h  dataset_wnp.cc  dataset_wnp.h  engine.cc  engine.h  kinect_v2.cc  kinect_v2.h  light.h  main.cc  mesh_object.cc  mesh_object.h  program.cc  program.h  robot_joint.cc  robot_joint.h  robot_link.cc  robot_link.h  robot_model.cc  robot_model.h  robot_model_loader.cc  robot_model_loader.h  robot_state.cc  robot_state.h  shader.cc  shader.h  texture.cc  texture.h  texture_object.cc  texture_object.h  types.h  vertex_array.cc  vertex_array.h
src/occlusion/object/: mesh_object.cc  mesh_object.h  point_cloud_object.cc  point_cloud_object.h  texture_object.cc  texture_object.h
src/occlusion/scene/: scene.cc  scene.h  scene_camera.cc  scene_camera.h  scene_edge.cc  scene_edge.h  scene_mesh.cc  scene_mesh.h  scene_node.cc  scene_node.h  scene_point_cloud.cc  scene_point_cloud.h
src/occlusion/shader/: program.cc  program.h  shader.cc  shader.h  shaders.cc  shaders.h
src/occlusion/widget/: camera_viewer.cc  camera_viewer.h  image_viewer.cc  image_viewer.h  scene_viewer.cc  scene_viewer.h  widget.cc  widget.h
src/shader/: color.frag  color.vert  depth.frag  depth.vert  pointcloud.frag  pointcloud.geom  pointcloud.vert  pointcloud_gray.frag  pointcloud_gray.vert  robot.frag  robot.vert  texture.frag  texture.vert
vs/: occlusion.sln  occlusion.vcxproj  occlusion.vcxproj.filters
